fix mobile spacing

--- a/src/App.css
+++ b/src/App.css
@@ -131,18 +131,19 @@ button {
     display: flex;
     align-items: flex-start;
     max-height: fit-content;
+    transform: translateY(-50px);
   }
   .Image {
     width: 100%;
     height: 100%;
     padding: 0;
     display: flex;
+    margin: 0;
   }
 
   .Image img {
     object-fit: contain;
     width: 100%;
-    transform: translateY(-50px);
   }
 
   .Info {
@@ -151,10 +152,11 @@ button {
   }
   .Info input {
     box-sizing: border-box;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
   .Container {
     padding: 0 25px;
+    margin: 30px 0;
   }
   button {
     margin-bottom: 50px;
